# SAPDatasphereMCP

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSING.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo_list_assets.py  demo_mcp_describe_asset.py  demo_mcp_profile_column.py  demo_mcp_query_relational.py  demo_mcp_search_assets.py  pyproject.toml  set-datasphere-env.example.ps1  test_list_spaces.py  test_mcp_preview_tool.py  test_preview_asset.py
.claude/: settings.json
.claude/agents/: mcp-tool-reviewer.md  security-reviewer.md
.claude/hooks/: block-secrets.ps1  ruff-format.ps1
.claude/skills/new-tool/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: Architecture.md  CHANGELOG.md  Extensions.md  README.md  backlog.md
docs/v0.1/: ImplementationTracker_v0.1.md  ProjectPlan_v0.1.md
docs/v0.2/: ImplementationTracker_v0.2.md  MCP_TestPrompts_v0.2.md  ProjectPlan_v0.2.md
docs/v0.3/: ImplementationTracker_v0.3.md  ProjectPlan_v0.3.md  TestPrompts_v0.3.md
docs/v1.0/: Architecture_v1.0.md  Decisions_v1.0.md  Deferred_v1.0.md  ImplementationTracker_v1.0.md  ProjectPlan_v1.0.md
examples/: README.md  demo_list_assets.py  demo_mcp_list_assets.py  demo_mcp_list_spaces.py  demo_mcp_preview_filtered.py  demo_mcp_space_summary.py  smoke_list_assets.py  smoke_list_spaces.py  smoke_mcp_preview_tool.py  smoke_preview_asset.py
npx-wrapper/: README.md  package.json
public_docs/: COMMERCIAL_LICENSING.md  INSTALLATION.md  MIGRATION.md  QUICKSTART.md  README.md  SAP_API_POLICY.md  TOOLS.md
src/sap_datasphere_mcp/: __init__.py  __main__.py  audit.py  auth.py  cache.py  client.py  config.py  models.py  policy.py  policy_evidence.py  redaction.py  server.py  test_list_assets.py
src/sap_datasphere_mcp/plugins/: __init__.py  registry.py
src/sap_datasphere_mcp/prompts/: __init__.py  audit_space.py  compare_assets.py  explain_analytical_model.py  find_data_about_topic.py  profile_dataset.py
src/sap_datasphere_mcp/resources/: __init__.py  catalog_resources.py
src/sap_datasphere_mcp/tools/: __init__.py  _aliases.py  _gated.py  _metadata.py  catalog.py  connections.py  connectivity.py  data.py  discover.py  governance.py  profile.py  query.py  registry.py  spaces.py  summarize.py  tasks.py
src/sap_datasphere_mcp/transports/: http_server.py  stdio_server.py
tests/: __init__.py  test_diagnostics_and_identity.py  test_limits_cache_diagnostics.py  test_metadata_tools.py  test_plugin_registry.py  test_profile_column.py  test_sanity.py  test_v1_registry.py
