[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sap-datasphere-mcp"
version = "0.1.0"
description = "MCP server exposing SAP Datasphere tools and resources"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rahul Sethi" }]

dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
sap-datasphere-mcp = "sap_datasphere_mcp.transports.stdio_server:main"
