# SAP Datasphere MCP Server
# File: pyproject.toml
# Version: v2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sap-datasphere-server"
version = "0.2.0"
description = "MCP server exposing SAP Datasphere tools and resources"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rahul Sethi" }]
license = { file = "LICENSE" }

dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
sap-datasphere-mcp = "sap_datasphere_mcp.transports.stdio_server:main"

[tool.hatch.build.targets.wheel]
# Explicitly tell Hatch which package directory to include in the wheel
packages = ["src/sap_datasphere_mcp"]
